# mcp_yougile

./: .env.example  .gitattributes  .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
doc/: document (1).json  document (2).json
src/yougile_mcp/: __init__.py  app.py  client.py  config.py  models.py  server.py
src/yougile_mcp/tools/: __init__.py  boards.py  chats.py  columns.py  departments.py  misc.py  projects.py  stickers.py  tasks.py  users.py  webhooks.py
tests/: conftest.py  test_client.py  test_tools.py
