[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "yougile-mcp"
version = "0.1.0"
description = "MCP server for the YouGile task tracker API (v2)"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Александр Мельников" }]
keywords = ["mcp", "yougile", "task-tracker", "llm"]
dependencies = [
    "mcp>=1.2.0",
    "httpx>=0.27",
    "pydantic>=2.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
]

[project.scripts]
yougile-mcp = "yougile_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/yougile_mcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
